Description
It happens quite randomly while building ReactOS. But it always happens, there's no build without it happening.
ERROR: RtlpWaitForCriticalSection at sdk/lib/rtl/critical.c:172
|
Deadlock: 0x0041EA04
|
(subsystems/win32/csrsrv/server.c:616) CsrUnhandledExceptionFilter called
|
ERROR: RtlpWaitForCriticalSection at sdk/lib/rtl/critical.c:172
|
Deadlock: 0x0041EA04
|
(ntoskrnl/ke/i386/exp.c:1077) Kill csrss.exe, ExceptionCode: 80000003, ExceptionAddress: 7C92EA62, BaseAddress: 00400000, P0: 0, P1: 0
|
Terminating critical process 0xB15E7D88 (csrss.exe)
|
Break, or Ignore (bi)?
|
kdb:> b
|
|
Entered debugger on embedded INT3 at 0x0008:0x8094d41e.
|
kdb:> bt
|
Eip:
|
f6f2e4d0 <NTOSKRNL.EXE:14d41f (:0 (DbgBreakPoint))>
|
Frames:
|
f6f2e518 <NTOSKRNL.EXE:10c7c8 (ntoskrnl/ps/kill.c:1197 (NtTerminateProcess))>
|
f6f2e568 <NTOSKRNL.EXE:131a3e (ntoskrnl/include/internal/i386/ke.h:712 (KiSystemServiceHandler))>
|
f6f2e570 <NTOSKRNL.EXE:3d1f (:0 (KiSystemService))>
|
f6f2e968 <NTOSKRNL.EXE:24d4 (:0 (ZwTerminateProcess))>
|
f6f2ece0 <NTOSKRNL.EXE:8c59c (ntoskrnl/ke/except.c:158 (KiRaiseException))>
|
f6f2ed08 <NTOSKRNL.EXE:8c5ff (ntoskrnl/ke/except.c:191 (NtRaiseException))>
|
f6f2ed5c <NTOSKRNL.EXE:131a3e (ntoskrnl/include/internal/i386/ke.h:712 (KiSystemServiceHandler))>
|
f6f2ed64 <NTOSKRNL.EXE:3da9 (:0 (KiFastCallEntry))>
|
016efc34 <ntdll.dll:e6a5 (:0 (KiIntSystemCall))>
|
016efc4c <ntdll.dll:2c280 (sdk/lib/rtl/critical.c:512 (RtlEnterCriticalSection))>
|
016efc64 <winsrv.DLL:540b (win32ss/user/winsrv/consrv/condrv/console.c:132 (ConDrvValidateConsoleUnsafe))>
|
016efd1c <winsrv.DLL:130e3 (win32ss/user/winsrv/consrv/frontends/gui/conwnd.c:1264 (ConWndProc))>
|
016efd4c <user32.dll:61699 (:0 (CALL_EXTERN_WNDPROC))>
|
016efea4 <user32.dll:5574b (win32ss/user/user32/windows/message.c:1522 (IntCallWindowProcW))>
|
016efef4 <user32.dll:55b94 (win32ss/user/user32/windows/message.c:1773 (IntCallMessageProc))>
|
016eff5c <user32.dll:562c1 (win32ss/user/user32/windows/message.c:2021 (DispatchMessageW))>
|
016efff4 <winsrv.DLL:10a57 (win32ss/user/winsrv/consrv/frontends/gui/guiterm.c:254 (GuiConsoleInputThread))>
|
00000000 <00000000>
|
kdb:> cont
|
|
*** Fatal System Error: 0x00000050
|
(0xF000FF53,0x00000000,0xF7247075,0x00000000)
|
|
Driver at fault:
|
*** win32k.sys - Address F7247075 base at F7214000, DateStamp 5b0569ca
|
.
|
|
Entered debugger on embedded INT3 at 0x0008:0x8094d424.
|
kdb:> bt
|
Eip:
|
f70c307c <NTOSKRNL.EXE:14d425 (:0 (RtlpBreakWithStatusInstruction))>
|
Frames:
|
f70c340c <NTOSKRNL.EXE:8918d (ntoskrnl/ke/bug.c:1100 (KeBugCheckWithTf))>
|
f70c342c <NTOSKRNL.EXE:89764 (ntoskrnl/ke/bug.c:1456 (KeBugCheckEx))>
|
f70c34ac <NTOSKRNL.EXE:b39aa (ntoskrnl/mm/ARM3/pagfault.c:2003 (MmArmAccessFault))>
|
f70c34cc <NTOSKRNL.EXE:e5065 (ntoskrnl/mm/mmfault.c:251 (MmAccessFault))>
|
f70c353c <NTOSKRNL.EXE:130c4a (ntoskrnl/ke/i386/traphdlr.c:1340 (KiTrap0EHandler))>
|
f70c3544 <NTOSKRNL.EXE:36ac (:0 (KiTrap0E))>
|
f70c35c8 <win32k.sys:33070 (win32ss/user/ntuser/desktop.c:1150 (IntDeRegisterShellHookWindow))>
|
f70c3608 <win32k.sys:7b253 (win32ss/user/ntuser/window.c:536 (co_UserFreeWindow))>
|
f70c3670 <win32k.sys:7cc82 (win32ss/user/ntuser/window.c:2757 (co_UserDestroyWindow))>
|
f70c36a8 <win32k.sys:8ad0c (win32ss/user/ntuser/object.c:739 (UserDestroyObjectsForOwner))>
|
f70c36e0 <win32k.sys:1987b (win32ss/user/ntuser/main.c:752 (ExitThreadCallback))>
|
f70c3700 <win32k.sys:1a38d (win32ss/user/ntuser/main.c:868 (Win32kThreadCallback))>
|
f70c3778 <NTOSKRNL.EXE:10bb7c (ntoskrnl/ps/kill.c:743 (PspExitThread))>
|
f70c3790 <NTOSKRNL.EXE:10c1ee (ntoskrnl/ps/kill.c:940 (PsExitSpecialApc))>
|
f70c37f0 <NTOSKRNL.EXE:877da (ntoskrnl/ke/apc.c:474 (KiDeliverApc))>
|
f70c3820 <NTOSKRNL.EXE:12ece5 (ntoskrnl/include/internal/i386/ke.h:782 (KiServiceExit))>
|
f70c3850 <NTOSKRNL.EXE:132022 (ntoskrnl/ke/i386/usercall.c:350 (KiUserModeCallout))>
|
f70c3b7c <NTOSKRNL.EXE:3f52 (:0 (KiCallUserMode))>
|
f70c3bac <win32k.sys:23652 (win32ss/user/ntuser/callback.c:1153 (co_IntDeliverUserAPC))>
|
f70c3bd4 <win32k.sys:5deac (win32ss/user/ntuser/msgqueue.c:2192 (co_MsqWaitForNewMessages))>
|
f70c3c1c <win32k.sys:53ac0 (win32ss/user/ntuser/message.c:1109 (co_IntGetPeekMessage))>
|
f70c3c64 <win32k.sys:32c63 (win32ss/user/ntuser/desktop.c:919 (DesktopThreadMain))>
|
f70c3c84 <win32k.sys:41f77 (win32ss/user/ntuser/input.c:347 (CreateSystemThreads))>
|
f70c3d0c <win32k.sys:6e531 (win32ss/user/ntuser/simplecall.c:394 (NtUserCallOneParam))>
|
f70c3d5c <NTOSKRNL.EXE:131a3e (ntoskrnl/include/internal/i386/ke.h:712 (KiSystemServiceHandler))>
|
f7538d64 <NTOSKRNL.EXE:3da9 (:0 (KiFastCallEntry))>
|
00f1fff4 <ntdll.dll:e6a5>
|
00000000 <00000000>
|
Attachments
Issue Links
- blocks
-
CORE-13683 Make it possible to build ReactOS on itself, building rosonros
-
- Resolved
-
- duplicates
-
CORE-14402 CONSRV deadlock: holding lock while sending window message
-
- Open
-