[0.4.9] cherry-pick [CMD] Improve the situations when the console title can be changed.

- Introduce two small helpers to change and restore the console title.
- Console title can change even when internal commands are executed.
- Note that when commands are run from within batch files, title is unchanged.
- When "cmd.exe /c command" is run, the console title is unchanged; however
  when "cmd.exe /k command" is run, the console title changes.

(cherry picked from commit a16599906794d2069392fbd57b1f01ae9dcc983c)
picked to fix CORE-14648 which was the last puzzle-piece to build ros on ros